fix: searchbar hidden by safe area

--- a/components/mobile/topSearchbar.module.scss
+++ b/components/mobile/topSearchbar.module.scss
@@ -1,10 +1,9 @@
 .top-search-wrap {
   background-color: #fff;
   position: sticky;
-  top: 0;
+  top: env(safe-area-inset-top);
   min-height: 55px;
   width: 100%;
-  // z-index: 2;
 
   .search-area {
     border: 1px solid #e5e5e5;
